# price_fetcher_server

./: Cargo.toml  LICENSE-APACHE  README.md
src/: data_aggregator.rs  errors.rs  lib.rs  main.rs  models.rs  pub_sub.rs  traits.rs  websocket_client.rs  websocket_server.rs
src/adapters/: binance.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs
src/raw_code/: main2.rs  main3.rs  main4.rs
