[package]
name = "price_fetcher_server"
version = "0.1.0"
edition = "2021"

[dependencies]
binance = "0.21.0"
axum ={version= "0.6", features = ["ws"]}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*" , features = ["tls"]}
futures-util = "0.3"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"